--- a/index.html
+++ b/index.html
@@ -1,19 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500;600&family=Comic+Neue:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-</head>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <header class="header">
+                <div class="box1">
+                 <img src="logo.png">
+                 <span>IMAGE</span>
+                </div>
+                <div class="box2">
+                     <a href="">Home</a>
+                     <a href="">About</a>
+                     <a href="">Blogs</a>
+                     <a href="">Plans</a>
+                     <a href="">Gallery</a>
+                     <a href="">Contact </a>
+                </div>
+                <button class="btn">Book Trial</button>
+             </header>
+        </header>
+       <div class="home">
+        <h2>
+            Photographer's Blog
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolor laboriosam nisi, perspiciatis neque</p>
+       </div>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+       <div class="imgd">
+        <div><img src="img1.png" alt=""></div>
+        <div><img src="img2.png" alt=""></div>
+        <div><img src="img3.png" alt=""></div>
+        <div><img src="img4.png" alt=""></div>
+        <div><img src="img5.png" alt=""></div>
+        <div><img src="img6.png" alt=""></div>
+       </div>
 
+       <footer class="ftr">
+        <div>
+            <h4>Start your Journey!</h4>
+            <h2>Lets capture this world</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti ex repudiandae laudantium magnam provident doloremque aperiam animi itaque corporis vero consequatur reiciendis reprehenderit, quasi voluptatem fugit eius? Nisi, quidem fuga!</p>
+        </div>
+        <button class="btn">Book Trial</button>
+
+        <div class="lst">
+            <div class="phto">
+                Photography
+                
+            </div>
+             <div class="contct">Contact Us
+
+             </div>
+            <div class="news">NewsLetter</div>
+        </div>
+       </footer>
+        <script src="" async defer></script>
+    </body>
 </html>
